Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0 RC
-
2444455d2 (112-based), de57e1b0b (dev), a82e90223 (6.7), 8bedcaac0 (dev), 7e17f11b3 (6.7), d1b9391d0 (dev), 234c6f4f9 (6.7)
Description
When using MediaDevices API to capture screen inside the WebEngine, Qt does not provide a way for users to select screen/window to grab the stream. It always returns the main screen to capture instead.
Here is the quote from specification of this API:
The MediaDevices interface's getDisplayMedia() method prompts the user to select and grant permission to capture the contents of a display or portion thereof (such as a window) as a MediaStream.
I've attached examples examples.tar.xz using this API, both QWidgets (QWebEngineView) and QML versions (WebEngineView), neither of these examples provide source selection dialog. But Chrome on the other hand shows this dialog
NOTE: since Qt does not fully support the spec, this ticket set to be a "Bug".
Observed behaviour: the stream selection dialog does not appear
Expected behaviour: either
- Qt should display a dialog to select screen/window to grab,
- or Qt should provide some API for doing this on the application side.
Attachments
Issue Links
- is required for
-
QTBUG-114963 Improved support of screen sharing extensions
-
- Open
-
- relates to
-
QTBUG-70077 QtWebEngine should provide a list of capture devices
-
- Closed
-
-
QTBUG-80054 [WebRTC] screencapture should bring up a selection dialog in webengine
-
- Closed
-