FIXUP: Add minimal webrtcdesktopcapture api for hangout services extension

- Enable selecting window type.
 - Keep the ExtensionFunction alive
   until the we call back from the api.
 - Handle rejected requests correctly.
 - Keep DesktopCaptureRequestsRegistry clean.

Task-number: QTBUG-112142
Change-Id: Ic103479f79ca5d94409506e9b9a8c5907e308ce2
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/493241
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>