chromium/qtwebengine/browser/extensions/api/webrtc_desktop_capture_private/webrtc_desktop_capture_private_api.h
@@ -79,7 +79,6 @@ class WebrtcDesktopCapturePrivateChooseDesktopMediaFunction : public ExtensionFu
   ResponseAction Run() override;
 
   int request_id_;
-  base::WeakPtrFactory<WebrtcDesktopCapturePrivateChooseDesktopMediaFunction> weak_factory_{this};
 };
 
 class DesktopCaptureRequestsRegistry {
